# freeciv

fcgym/: .gitignore  Makefile  README.md  demo_freeciv_gym_env.py  fcgym.c  fcgym.h  fcgym_test.c  freeciv_gym_env.py  meson.build
server/: srv_main.c  srv_main.h
